fix: change spacing for footer and contact section

--- a/components/Contact/Contact.module.css
+++ b/components/Contact/Contact.module.css
@@ -1,6 +1,6 @@
 .container {
   color: white;
-  padding-bottom: 5rem;
+  padding-bottom: 3rem;
 }
 
 .contactButton {
