--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -2,7 +2,7 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  margin: 3rem 0 2rem 0;
+  margin: 0;
   position: relative;
 }
 
@@ -19,7 +19,7 @@
 
 @media (min-width: 769px) {
   .container {
-    margin-bottom: 2rem;
+    margin: 3rem 0 2rem 0;
   }
 
   .container > ul {
