--- a/styles/RebajaTusCuentas.module.css
+++ b/styles/RebajaTusCuentas.module.css
@@ -200,3 +200,11 @@
 .primaryBackground {
   background-color: var(--primary);
 }
+
+.projectsSection {
+  display: block;
+}
+
+.project {
+  box-sizing: border-box;
+}
