--- a/styles/globals.css
+++ b/styles/globals.css
@@ -147,6 +147,10 @@ figure {
   padding-left: 1.5rem;
 }
 
+.text-white {
+  color: white!important;
+}
+
 .text-centered {
   text-align: center;
 }
